Setup preview for appx
Signed-off-by: Stefan Prodan <stefan.prodan@gmail.com>

--- a/kubernetes/clusters/local/instance.yaml
+++ b/kubernetes/clusters/local/instance.yaml
@@ -24,6 +24,6 @@ spec:
     kind: GitRepository
     provider: github
     url: "https://github.com/pull-request-wars-fluxcd/platform"
-    ref: "refs/heads/dev"
+    ref: "refs/heads/main"
     path: "kubernetes/clusters/local"
     pullSecret: github-app-auth
