--- a/kubernetes/clusters/local/github-updates.yaml
+++ b/kubernetes/clusters/local/github-updates.yaml
@@ -3,7 +3,7 @@ apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Provider
 metadata:
   name: github-status-platform
-  namespace: app-preview
+  namespace: flux-system
 spec:
   type: github
   address: https://github.com/pull-request-wars-fluxcd/platform
@@ -14,7 +14,7 @@ apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
 metadata:
   name: github-status-platform
-  namespace: app-preview
+  namespace: flux-system
 spec:
   providerRef:
     name: github-commit-status
