Setup alert providers
Signed-off-by: Stefan Prodan <stefan.prodan@gmail.com>

--- a/kubernetes/apps-preview/github-updates.yaml
+++ b/kubernetes/apps-preview/github-updates.yaml
@@ -17,7 +17,7 @@ metadata:
   namespace: app-preview
 spec:
   providerRef:
-    name: github-commit-status
+    name: github-status-flux-appx
   eventSources:
     - kind: GitRepository
       name: '*'
